--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </main>
     <section>
       <div name="about-section" class="about" id="about">
+        <h1> Welcome and Thanks for your Visit! </h1>
+        <p> This is my Personal Website hosted by Github feel free to Contact me if you have an Idea or a Project.</p>
         <div>
       </div>
       </section>
