--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title> DepressedUnicorn - Your coding Expert 24/7.</title>
-    <link rel="stylesheet" href="https://github.com/DepressedUnicorn/WelcomePage/css/main.css">
+    <link rel="stylesheet" href="@css/main.css">
   </head>
   <body>
     <main>
       <div class="navbar" id="home">
         <ul>
-          <li name="Home" href="#home"></li>
-          <li name="About" href="#about"></li>
-          <li name="Works" href="#works"></li>
-          <li name="Projects" href="#projects"></li>
-          <li name="Contact" href="#contact"></li>
+          <li name="Home" href="#home">Home</li>
+          <li name="About" href="#about">About</li>
+          <li name="Works" href="#works">Works</li>
+          <li name="Projects" href="#projects">Projects</li>
+          <li name="Contact" href="#contact">Contact</li>
         </ul>
     </main>
     <section>
