--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
           <li name="Contact" href="#contact">Contact</li>
         </ul>
     </main>
-    <section>
-      <div name="about-section" class="about" id="about">
+    <section name="Title-Page">
+      <div name="title-page" class="title">
         <h1> Welcome and Thanks for your Visit! </h1>
         <p> This is my Personal Website hosted by Github feel free to Contact me if you have an Idea or a Project.</p>
-        <div>
       </div>
+      </section>
+      <section name="about-section" id="about">
+        <div class="about">
+          <h1>About Me</h1>
+          <h2>Introduction</h2>
+          <p> Lorem Ipsum Dolor explodirum vasum et. Lorem ipsum et solum lumen ?</p>
+        </div>
       </section>
       </body>
 </html>
