--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title> DepressedUnicorn - Your coding Expert 24/7.</title>
-    <link rel="stylesheet" type=text/css href="main.css">
+    <link rel="stylesheet" type=text/css href="//welcomepage/main.css">
   </head>
   <body>
     <main>
